overflow fixed

--- a/Css/style.css
+++ b/Css/style.css
@@ -19,7 +19,7 @@
 }
 @media(max-width:768px){
     body{
-        overflow: hidden;
+        overflow-x: hidden;
     }
     .sideBar{
         position: absolute;
